Fix box shadow wrapping in card-columns.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -98,7 +98,7 @@ body > .alert
 {
     border: none;
     background: var(--base01);
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.16);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16);
 }
 
 .post-form
