--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -53,7 +53,6 @@
 
 .post-full
 {
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.16);
     margin-bottom: 25px;
     
     .card-body
